# Novak

./: .gitignore  CMakeLists.txt
include/common/: Constants.hpp  Order.hpp  Trade.hpp  Types.hpp
include/engine/: MatchingEngine.hpp  OrderRequest.hpp  OrderResult.hpp
include/network/: ClientSession.hpp  Socket.hpp  TcpServer.hpp
include/orderbook/: OrderBook.hpp
include/parser/: CommandParser.hpp
include/queue/: ThreadSafeQueue.hpp
src/: main.cpp
src/client/: TestClient.cpp
src/engine/: MatchingEngine.cpp
src/network/: ClientSession.cpp  TcpServer.cpp  Winsock.cpp
src/orderbook/: OrderBook.cpp
src/parser/: CommandParser.cpp
